# sfml-rogue-like

./: CMakeLists.txt  Makefile
include/: AssetManager.hpp  Enemy.hpp  Entity.hpp  EntityManager.hpp  Game.hpp  InputManager.hpp  MainMenuState.hpp  Player.hpp  Projectile.hpp  SplashScreenState.hpp  State.hpp  StateManager.hpp  TestGameState.hpp
src/: AssetManager.cpp  Game.cpp  InputManager.cpp  MainMenuState.cpp  SplashScreenState.cpp  StateManager.cpp  TestGameState.cpp  main.cpp
